[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/observer/pewpew_observer_attack_2.png" type="Texture" id=1]
[ext_resource path="res://sprites/observer/observer_roll_3.png" type="Texture" id=2]
[ext_resource path="res://sprites/observer/observer_roll_6.png" type="Texture" id=3]
[ext_resource path="res://sprites/observer/observer_roll_7.png" type="Texture" id=4]
[ext_resource path="res://sprites/observer/observer_roll_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/observer/observer_roll_4.png" type="Texture" id=6]
[ext_resource path="res://sprites/observer/observer_roll_5.png" type="Texture" id=7]
[ext_resource path="res://sprites/observer/observer_roll_0.png" type="Texture" id=8]
[ext_resource path="res://sprites/observer/pewpew_observer_attack_3.png" type="Texture" id=9]
[ext_resource path="res://sprites/observer/observer_roll_1.png" type="Texture" id=10]
[ext_resource path="res://sprites/observer/pewpew_observer_attack_0.png" type="Texture" id=11]
[ext_resource path="res://sprites/observer/pewpew_observer_attack_1.png" type="Texture" id=12]
[ext_resource path="res://sprites/observer/observer_death_7.png" type="Texture" id=13]
[ext_resource path="res://sprites/observer/observer_death_1.png" type="Texture" id=14]
[ext_resource path="res://sprites/observer/observer_death_6.png" type="Texture" id=15]
[ext_resource path="res://sprites/observer/observer_death_2.png" type="Texture" id=16]
[ext_resource path="res://sprites/observer/observer_death_0.png" type="Texture" id=17]
[ext_resource path="res://sprites/observer/observer_death_3.png" type="Texture" id=18]
[ext_resource path="res://sprites/observer/observer_death_5.png" type="Texture" id=19]
[ext_resource path="res://sprites/observer/observer_death_4.png" type="Texture" id=20]
[ext_resource path="res://ObserverFireEffect.tscn" type="PackedScene" id=21]
[ext_resource path="res://Observer.gd" type="Script" id=22]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=23]
[ext_resource path="res://ArmorBar.tscn" type="PackedScene" id=24]
[ext_resource path="res://fx/observer_roll.wav" type="AudioStream" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 1 ), ExtResource( 9 ) ],
"loop": true,
"name": "Attack",
"speed": 4.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Roll",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.13415, 4.5734 )

[node name="Observer" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 22 )

[node name="Observer_Ani" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Attack"
frame = 3

[node name="Observer_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -2.25499, 7.17079 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="ObserverFireEffect" parent="." instance=ExtResource( 21 )]
position = Vector2( 25.8424, 5.97197 )

[node name="LedgeDetectRay" type="RayCast2D" parent="."]
position = Vector2( 13.883, 0.220366 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="VisionRay" type="RayCast2D" parent="."]
position = Vector2( 5.64885, 5.22016 )
enabled = true
cast_to = Vector2( 100, 0 )

[node name="AggressionCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 24.079, 6.22268 )

[node name="HealthBar" parent="." instance=ExtResource( 23 )]
margin_left = -17.0
margin_top = -20.0
margin_right = -17.0
margin_bottom = -20.0
rect_scale = Vector2( 0.55, 0.5 )

[node name="ArmorBar" parent="." instance=ExtResource( 24 )]
margin_left = -16.7258
margin_top = -22.5393
margin_right = -16.7258
margin_bottom = -22.5393
rect_scale = Vector2( 0.55, 0.5 )

[node name="FX" type="Node2D" parent="."]

[node name="Observer_Roll" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 25 )
max_distance = 200.0
[connection signal="animation_finished" from="Observer_Ani" to="." method="_on_Observer_Ani_animation_finished"]
[connection signal="frame_changed" from="Observer_Ani" to="." method="_on_Observer_Ani_frame_changed"]
[connection signal="timeout" from="AggressionCooldown" to="." method="_on_AggressionCooldown_timeout"]
